--- a/Spark RDF Analyzer - Standalone Version/src/main/webapp/conviewer/index.html
+++ b/Spark RDF Analyzer - Standalone Version/src/main/webapp/conviewer/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" type="text/css" href="./lib/bootstrap.css">
 	<link rel="stylesheet" href="style/halfviz.css" type="text/css" charset="utf-8">
+	<script type="text/javascript" src="./../js/app-config.js"></script>
 	<script type="text/javascript" src="./lib/jquery-1.8.3.js"></script>
     <script type="text/javascript" src="./lib/bootstrap.min.js"></script>
      <script type="text/javascript" src="./lib/autocomplete.js"></script>
