--- a/Spark RDF Analyzer - Standalone Version/src/main/webapp/index_Old.html
+++ b/Spark RDF Analyzer - Standalone Version/src/main/webapp/index_Old.html
@@ -3,6 +3,9 @@
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 <link rel="stylesheet" type="text/css" href="loader.css">
 <link rel="stylesheet" type="text/css" href="loader2.css">
+
+<script type="text/javascript" src="js/app-config.js"></script>
+
 <div class="navbar navbar-inverse">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
@@ -41,7 +44,7 @@ function startJob()
   var selectedGraphValue = selectedGraph.options[selectedGraph.selectedIndex].value;
   
   
-  xhttp.open("GET", "http://192.168.42.130:8080/spark-rdfanalyzer2/rest/ALL/"+selectedTaskValue+"/"+selectedGraphValue, true);
+  xhttp.open("GET", REST_API + selectedTaskValue+"/"+selectedGraphValue, true);
   xhttp.send();
   
   
