--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,9 +7,7 @@
 <link rel="stylesheet" type="text/css" href="loader2.css">
 
 <script type="text/javascript" src="js/app-config.js"></script>
-</head>
-
-<script>
+<script type="text/javascript">
 	function chooseGraph(graphName) {
 		var xhttp = new XMLHttpRequest();
 
@@ -25,7 +23,7 @@
 		document.cookie = "graphName=" + graphName;
 		window.location.href = "statistics.html";
 	}
-	
+
 	function deleteGraph(graphName) {
 		var xhttp = new XMLHttpRequest();
 
@@ -60,16 +58,14 @@
 		xhttp.send();
 	}
 </script>
+</head>
 
 <body onload="getGraphs()" background="./img/bg.jpg"
 	style="-webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
-	<div class="navbar navbar-inverse"
-		style="background-color: rgba(70, 130, 180, 0.95);">
+	<div class="navbar navbar-inverse" style="background-color: rgba(70, 130, 180, 0.95);">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse"
-				data-target=".navbar-inverse-collapse">
-				<span class="icon-bar"></span> <span class="icon-bar"></span> <span
-					class="icon-bar"></span>
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+				<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="#">SPARK RDF ANALYSIS</a>
 		</div>
@@ -79,8 +75,7 @@
 	</div>
 
 	<form id="IDbardh" class="form-horizontal col-md-8 col-md-offset-2"
-		style="padding-bottom: 20px; background-color: rgba(70, 130, 180, 0.95); border-radius: 15px"
-		action="" method="post">
+		style="padding-bottom: 20px; background-color: rgba(70, 130, 180, 0.95); border-radius: 15px" action="" method="post">
 		<br>
 		<fieldset>
 			<div id="result" class="row"></div>
