Integrates empty browser window in application.

--- a/src/main/webapp/conviewer/index.html
+++ b/src/main/webapp/conviewer/index.html
@@ -112,6 +112,7 @@ keyframes ellipsis {to { width:20px;
 				<li><a href="../structure.html"><span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>&nbsp;Structure</a></li>
 				<li class="active"><a href="#"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>&nbsp;Connectivity Viewer</a></li>
 				<li><a href="../visualizer.html"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>&nbsp;Schema Visualizer</a></li>
+				<li><a href="../browser.html"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;RDF Browser</a></li>
 			</ul>
 		</div>
 		</nav>
