--- a/src/main/webapp/structure.html
+++ b/src/main/webapp/structure.html
@@ -115,6 +115,7 @@
 						<li><a href="./conviewer/index.html"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>&nbsp;Connectivity
 								Viewer</a></li>
 						<li><a href="visualizer.html"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>&nbsp;Schema Visualizer</a></li>
+						<li><a href="browser.html"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;RDF Browser</a></li>
 					</ul>
 				</div>
 			</nav>
