--- a/src/main/webapp/visualizer.html
+++ b/src/main/webapp/visualizer.html
@@ -173,6 +173,7 @@ text {
 								Viewer</a></li>
 						<li class="active"><a href="visualizer.html"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>&nbsp;Schema
 								Visualizer</a></li>
+						<li><a href="browser.html"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>&nbsp;RDF Browser</a></li>
 					</ul>
 				</div>
 			</nav>
