--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -6,7 +6,11 @@
 <link rel="stylesheet" type="text/css" href="loader.css">
 <link rel="stylesheet" type="text/css" href="loader2.css">
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 <script type="text/javascript" src="js/app-config.js"></script>
+<script type="text/javascript" src="js/browser.js"></script>
 <script type="text/javascript">
 	function getGraphName() {
 		var name = getCookie('graphName');
@@ -35,7 +39,6 @@
 				class="navbar-brand" href="#"><b>reading...</b></a>
 		</div>
 		<div class="navbar-collapse collapse navbar-inverse-collapse">
-
 			<ul class="nav navbar-nav navbar-right">
 			</ul>
 		</div>
@@ -59,7 +62,65 @@
 			</nav>
 		</fieldset>
 
-		<div id="result"></div>
+		<div id="entrypoint">
+			<h1>Select your entry point!</h1>
+			<p>
+				Here you can select from two opportunities to start browsing through the RDF graph.<br> Either manually select a node you want to
+				start with or use one of our suggestions.
+			</p>
+
+			<div id="manual">
+				<h2>Manual selection</h2>
+				<p>Enter a node's name and click button 'Search'.</p>
+				<input type="text" class="form-control" id="entryNode" style="width: 300px; display: inline;"> <a href="#"
+					class="btn btn-warning" id="btnSearch" onClick="showAutocompletionModal()" role="button" data-toggle="modal" data-target="#modal"
+					style="width: 120px; margin-left: 10px; margin-top: -2px;"><span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+					Search</a>
+			</div>
+
+			<div id="suggestions">
+				<h2>Suggested entry points</h2>
+				<p>Here we recommend some possible entry points that may be interesting for you.</p>
+			</div>
+		</div>
 	</form>
+
+	<!-- Autocompletion Modal -->
+	<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modalTitle">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" id="btnCloseModal" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title" id="modalTitle">Modal title</h4>
+				</div>
+				<div id="modalBody" class="modal-body">...</div>
+				<div class="modal-footer">
+					<button type="button" id="btnCancelModal" class="btn btn-default" data-dismiss="modal">Cancel</button>
+					<button type="button" id="btnStartBrowsing" class="btn btn-primary" onClick="startBrowsing(event)" data-toggle="modal"
+						data-target="#browserModal">Start Browsing</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Browser Modal -->
+	<div class="modal modal-fullscreen fade" id="browserModal" tabindex="-1" role="dialog" aria-labelledby="browserModalTitle">
+		<div class="modal-dialog" role="document" style="width: 100%; height: 100%; margin: 0; padding: 0;">
+			<div class="modal-content" style="height: 100%; width: 100%; border: none; border-radius: 0;">
+				<div class="modal-header">
+					<button type="button" id="btnCloseBrowserModal" class="close" data-dismiss="modal" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title" id="modalTitle">RDF Browser</h4>
+				</div>
+				<div id="browserModalBody" class="modal-body">...</div>
+				<div class="modal-footer">
+					<button type="button" id="btnCancelBrowserModal" class="btn btn-default" data-dismiss="modal">Exit Browser</button>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
