centrality tab created

--- a/src/main/webapp/conviewer/index.html
+++ b/src/main/webapp/conviewer/index.html
@@ -107,7 +107,7 @@ keyframes ellipsis {to { width:20px;
 
 		<nav class="navbar navbar-default">
 		<div class="container">
-			<ul class="nav navbar-navvv">
+			<ul class="nav navbar-nav">
 				<li><a href="../statistics.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;Statistics</a></li>
 				<li><a href="../structure.html"><span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>&nbsp;Structure</a></li>
 				<li class="active"><a href="#"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>&nbsp;Connectivity Viewer</a></li>
