--- a/src/main/webapp/structure.html
+++ b/src/main/webapp/structure.html
@@ -111,10 +111,10 @@
 				<div class="container">
 					<ul class="nav navbar-nav">
 						<li><a href="statistics.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;Statistics</a></li>
-						<li class="active"><a href="structure.html"><span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>&nbsp;Structure</a></li>
-						<li><a href="./conviewer/index.html"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>&nbsp;Connectivity
-								Viewer</a></li>
+						<li class="active"><a href="#"><span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>&nbsp;Structure</a></li>
+						<li><a href="./conviewer/index.html"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>&nbsp;Connectivity								Viewer</a></li>
 						<li><a href="visualizer.html"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>&nbsp;Schema Visualizer</a></li>
+						<li><a href="centrality.html"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>&nbsp;Centrality</a></li>
 					</ul>
 				</div>
 			</nav>
