--- a/src/main/webapp/centrality.html
+++ b/src/main/webapp/centrality.html
@@ -1,11 +1,13 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+   "http://www.w3.org/TR/html4/strict.dtd">
+
+<html lang="en">
 <head>
 <title>Spark RDF Analyzer - Connectivity Viewer</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<link rel="stylesheet" type="text/css" href="./lib/bootstrap.css">
-<link rel="stylesheet" href="style/halfviz.css" type="text/css" charset="utf-8">
+<link rel="stylesheet" type="text/css" href="bootstrap.css">
 
 <script type="text/javascript" src="./../js/app-config.js"></script>
 <script type="text/javascript" src="./lib/jquery-1.8.3.js"></script>
@@ -14,17 +16,91 @@
 <script src="./lib/jquery-1.6.1.min.js"></script>
 <script src="./lib/jquery.address-1.4.min.js"></script>
 <script src="./lib/arbor.js"></script>
+<!-- 
 <script src="./lib/graphics.js"></script>
+-->
 
-<!-- the halfviz source, broken out one ‘class’ per file -->
+<!-- 
+the halfviz source, broken out one ‘class’ per file 
 <script src="src/dashboard.js"></script>
 <script src="src/help.js"></script>
 <script src="src/io.js"></script>
 <script src="src/parseur.js"></script>
 <script src="src/renderer.js"></script>
 <script src="src/halfviz.js"></script>
+-->
+<style>
+.loading:after {
+	overflow: hidden;
+	display: inline-block;
+	vertical-align: bottom;
+	-webkit-animation: ellipsis steps(4, end) 900ms infinite;
+	animation: ellipsis steps(4, end) 900ms infinite;
+	content: "\2026"; /* ascii code for the ellipsis character */
+	width: 0px;
+}
+
+@
+keyframes ellipsis {to { width:20px;
+	
+}
+
+}
+@
+-webkit-keyframes ellipsis {to { width:20px;
+	
+}
+
+}
+#left {
+	width: 35%;
+	display: inline-block;
+}
+
+#right {
+	width: 65%;
+	display: inline-block;
+}
+
+#left, #right {
+	float: left;
+}
+</style>
 </head>
-<body>
+
+<body onload="getGraphName()" background="./img/bg.jpg"
+	style="-webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+	<div class="navbar navbar-inverse" style="background-color: rgba(70, 130, 180, 0.95);">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+				<span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="../index.html">SPARK RDF ANALYSIS</a> <a id="slash" class="navbar-brand" href="#">/</a> <a id="GraphName"
+				class="navbar-brand" href="#"><b>reading...</b></a>
+		</div>
+		<div class="navbar-collapse collapse navbar-inverse-collapse">
+
+			<ul class="nav navbar-nav navbar-right">
+			</ul>
+		</div>
+	</div>
+
+	<form id="IDbardh" class="form-horizontal col-md-10 col-md-offset-1"
+		style="padding-bottom: 20px; background-color: rgba(70, 130, 180, 0.95); border-radius: 15px" action="" method="post">
+		<br>
+
+		<nav class="navbar navbar-default">
+		<div class="container">
+			<ul class="nav navbar-nav">
+				<li><a href="statistics.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;Statistics</a></li>
+				<li><a href="structure.html"><span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>&nbsp;Structure</a></li>
+				<li><a href="./conviewer/index.html"><span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>&nbsp;Connectivity Viewer</a></li>
+				<li><a href="visualizer.html"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>&nbsp;Schema Visualizer</a></li>
+				<li class="active"><a href="#"><span class="glyphicon glyphicon-dashboard" aria-hidden="true"></span>&nbsp;Centrality</a></li>
+			</ul>
+		</div>
+		</nav>
+
 		<div class="parent">
 			<div class="font" id="left">
 				<div id="divNode1" class="form-group" style="margin: 20px 5px 20px 20px;">
@@ -43,88 +119,14 @@
 					</label>
 				</div>
 
-				<div id="divNode2" class="form-group" style="margin: 20px 5px 20px 20px;">
-					<label><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span> End Node</label>
-					<table style="width: 100%">
-						<tr>
-							<td style="width: 90%"><input type="text" class="form-control" id="inputNode2"
-								placeholder="Enter a node's name and click button 'Search'"></td>
-							<td style="width: 10%"><a style="margin-left: 5px;" href="#" class="btn btn-danger" role="button"
-								onClick="deleteChoice('Node2')"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
-						</tr>
-					</table>
-					<label style="margin-top: 5px;"> <a href="#" class="btn btn-warning" id="btnNode2" role="button" onClick="checkNode('Node2')"
-						data-toggle="modal" data-target="#basicModal"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search</a>
-					</label>
-				</div>
-				<div class="form-group" style="margin: 20px">
-					<label> <a class="btn btn-success disabled" id="btnSubmit" role="button" data-loading-text="Searching for connectons..."
-						onClick="startJob()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search for connections</a>
-					</label>
-				</div>
 				<div id="divSearch" style="visibility: hidden;" class="loading">
 					<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>&nbsp;Searching
 				</div>
 			</div>
-			<div class="font" id="right">
-				<div class="parent">
-					<div class="font" id="left" style="width: 55%;">
-						<div id="divPredicate" class="form-group" style="margin: 20px">
-							<label><span class="glyphicon glyphicon-filter" aria-hidden="true"></span>&nbsp;Predicate filtering</label> <input type="text"
-								class="form-control" id="inputPredicate" placeholder="Enter a predicate's name and click button 'Search'"> <label
-								style="margin-top: 5px;"><a href="#" class="btn btn-warning" id="btnPredicate" role="button"
-								onClick="checkNode('Predicate')" data-toggle="modal" data-target="#basicModal"><span class="glyphicon glyphicon-search"
-									aria-hidden="true"></span> Search</a></label> <label><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>&nbsp;If no
-								predicate is selected, then all predicates are considered</label>
-
-						</div>
-
-						<div id="divPredicateRadio" class="form-group" style="margin: 20px">
-							<div class="radio">
-								<label><input type="radio" name="radioPredicate" value="Include" checked><span class="glyphicon glyphicon-ok-sign"
-									aria-hidden="true"></span>&nbsp;Include only selected predicates on search</label>
-							</div>
-							<div class="radio">
-								<label><input type="radio" name="radioPredicate" value="Exclude"><span class="glyphicon glyphicon-remove-sign"
-									aria-hidden="true"></span>&nbsp;Exclude selected predicates from search</label>
-							</div>
-						</div>
-						<div id="divPredicateList" class="form-group" style="margin: 20px">
-							<label>Predicate(s) list</label>
-							<ul id="predicatesUL" class="list-group" style="width: 50%; text-color: black;">
-						</div>
-					</div>
-					<div class="font" id="right" style="width: 45%;">
-						<div class="panel panel-default" style="margin-right: 20px;">
-							<div class="panel-heading">
-								<span class="glyphicon glyphicon-search" aria-hidden="true"></span> Search patterns
-							</div>
-							<div class="panel-body"
-								style="color: white; background-color: rgba(70, 130, 180, 0.95); overflow-x: hidden; overflow-y: scroll; height: 250px;">
-								<label> <input type="checkbox" id="chPattern1" checked> S &#8594; E
-								</label> <br> <label> <input type="checkbox" id="chPattern2" checked> E &#8594; S
-								</label> <br> <label> <input type="checkbox" id="chPattern3" checked> S &#8594; &#9733; &#8592; E
-								</label> <br> <label> <input type="checkbox" id="chPattern4" checked> S &#8594; &#9733; &#8594; E
-								</label> <br> <label> <input type="checkbox" id="chPattern5" checked> E &#8594; &#9733; &#8594; S
-								</label> <br> <label> <input type="checkbox" id="chPattern6" checked> S &#8592; &#9733; &#8594; E
-								</label> <br> <label> <input type="checkbox" id="chPattern7" checked> S &#8594; &#9733; &#8594; &#9733; &#8594; E
-								</label> <br> <label> <input type="checkbox" id="chPattern8" checked> S &#8594; &#9733; &#8594; &#9733; &#8592; E
-								</label> <br> <label> <input type="checkbox" id="chPattern9" checked> E &#8594; &#9733; &#8594; &#9733; &#8594; S
-								</label> <br> <label> <input type="checkbox" id="chPattern10" checked> E &#8594; &#9733; &#8594; &#9733; &#8592; S
-								</label> <br> <label> <input type="checkbox" id="chPattern11" checked> S &#8594; &#9733; &#8592; &#9733; &#8594; E
-								</label> <br> <label> <input type="checkbox" id="chPattern12" checked> S &#8592; &#9733; &#8592; &#9733; &#8594; E
-								</label> <br> <label> <input type="checkbox" id="chPattern13" checked> S &#8592; &#9733; &#8594; &#9733; &#8594; E
-								</label> <br> <label> <input type="checkbox" id="chPattern14" checked> S &#8592; &#9733; &#8594; &#9733; &#8592; E
-								</label>
-							</div>
-						</div>
-						<label>S - StartNode; E - EndNode; &#9733; - AnyNode</label>
-					</div>
-				</div>
-				</ul>
-			</div>
 		</div>
-		</div>
+	</form>
+
 </body>
+
+
 </html>
-		
