--- a/src/main/webapp/centrality.html
+++ b/src/main/webapp/centrality.html
@@ -9,13 +9,23 @@
 
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
 
-<script type="text/javascript" src="./../js/app-config.js"></script>
-<script type="text/javascript" src="./lib/jquery-1.8.3.js"></script>
-<script type="text/javascript" src="./lib/bootstrap.min.js"></script>
-<script type="text/javascript" src="./lib/autocomplete.js"></script>
-<script src="./lib/jquery-1.6.1.min.js"></script>
-<script src="./lib/jquery.address-1.4.min.js"></script>
-<script src="./lib/arbor.js"></script>
+<script type="text/javascript" src="./js/app-config.js"></script>
+<script type="text/javascript" src="conviewer/lib/jquery-1.8.3.js"></script>
+<script type="text/javascript" src="conviewer/lib/bootstrap.min.js"></script>
+<script type="text/javascript" src="conviewer/lib/autocomplete.js"></script>
+<script src="conviewer/lib/jquery-1.6.1.min.js"></script>
+<script src="conviewer/lib/jquery.address-1.4.min.js"></script>
+<script src="conviewer/lib/arbor.js"></script>
+<script>
+function getDegree(){
+	/*
+	*
+	*	get degree type i.e in-degree, out-degree.
+	*	
+	*/
+
+}
+</script>
 <!-- 
 <script src="./lib/graphics.js"></script>
 -->
@@ -104,7 +114,7 @@ keyframes ellipsis {to { width:20px;
 		<div class="parent">
 			<div class="font" id="left">
 				<div id="divNode1" class="form-group" style="margin: 20px 5px 20px 20px;">
-					<label><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span> Start Node</label>
+					<label><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span> Select a Node</label>
 					<table style="width: 100%">
 						<tr>
 							<td style="width: 90%"><input type="text" class="form-control" id="inputNode1"
@@ -123,8 +133,59 @@ keyframes ellipsis {to { width:20px;
 					<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>&nbsp;Searching
 				</div>
 			</div>
+			<div class="font" id="right">
+				<div class="parent">
+					<section class="centrality_metrics" style="margin:20px">
+					<label><span class="glyphicon glyphicon-pushpin" aria-hidden="true"></span> Metric:</label>
+						<div class="radio">
+						  <label><input type="radio" name="optradio">In degree</label>
+						</div>
+						<div class="radio">
+						  <label><input type="radio" name="optradio">Out degree</label>
+						</div>
+						<div class="radio">
+						  <label><input type="radio" name="optradio">Closeness Centrality</label>
+						</div>
+						<div class="radio">
+						  <label><input type="radio" name="optradio">Betweenness Centrality</label>
+						</div>
+					</section>
+				</div>
+			</div>
+			<div class="form-group" style="margin: 20px">
+				<label> <a class="btn btn-success disabled" id="btnSubmit" role="button" data-loading-text="Searching for connectons..."
+					onClick="startJob()"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Calculate</a>
+				</label>
+			</div>
+			<div id="divSearch" style="visibility: hidden;" class="loading">
+				<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>&nbsp;Searching
+			</div>
+			
 		</div>
 	</form>
+	<div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="closeDialog()">&times;</button>
+					<h3 class="modal-title" id="myModalLabel" style="text-align: center" nodeName="">
+						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Choose a URI
+					</h3>
+				</div>
+				<div class="alert alert-info" id="listNodes">
+					<p>
+						<span class="glyphicon glyphicon-search" aria-hidden="true"></span> Searching on graph for URIs that match your query.
+					</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal" onclick="closeDialog()">Close</button>
+					<button type="button" id="listButton" class="btn btn-primary" data-dismiss="modal" onclick="selectNode()">
+						<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Select URI
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 
