--- a/src/main/webapp/conviewer/index.html
+++ b/src/main/webapp/conviewer/index.html
@@ -86,6 +86,9 @@ keyframes ellipsis {to { width:20px;
 
 <body onload="getGraphName()" background="./img/bg.jpg"
 	style="-webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;">
+
+	<input type="hidden" value="conviewer" id="pagetype" />
+
 	<div class="navbar navbar-inverse" style="background-color: rgba(70, 130, 180, 0.95);">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
