Displays browsing history.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -113,7 +113,13 @@
 					<button type="button" id="btnCloseBrowserModal" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
+
 					<h4 class="modal-title" id="modalTitle">RDF Browser</h4>
+
+					<div id="browsingHistory">
+						<span>History:&nbsp;&nbsp;&nbsp;</span>
+						<ol id="list" class="breadcrumb" style="display: inline; margin: 0; padding: 0;"></ol>
+					</div>
 				</div>
 				<div id="browserModalBody" class="modal-body">...</div>
 				<div class="modal-footer">
