--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -93,9 +93,12 @@
 					<button type="button" id="btnCloseModal" class="close" data-dismiss="modal" aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
+
 					<h4 class="modal-title" id="modalTitle">Modal title</h4>
 				</div>
+
 				<div id="modalBody" class="modal-body">...</div>
+
 				<div class="modal-footer">
 					<button type="button" id="btnCancelModal" class="btn btn-default" data-dismiss="modal">Cancel</button>
 					<button type="button" id="btnStartBrowsing" class="btn btn-primary" onClick="startBrowsing(event)" data-toggle="modal"
@@ -121,8 +124,10 @@
 						<ol id="list" class="breadcrumb" style="display: inline; margin: 0; padding: 0;"></ol>
 					</div>
 				</div>
+
 				<div id="browserModalBody" class="modal-body">...</div>
-				<div class="modal-footer">
+
+				<div class="modal-footer" style="position: fixed; bottom: 0; width: 100%;">
 					<button type="button" id="btnCancelBrowserModal" class="btn btn-default" data-dismiss="modal">Exit Browser</button>
 				</div>
 			</div>
