Hides footer from browser modal.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -127,9 +127,9 @@
 
 				<div id="browserModalBody" class="modal-body">...</div>
 
-				<div class="modal-footer" style="position: fixed; bottom: 0; width: 100%;">
+				<!--<div class="modal-footer" style="position: fixed; bottom: 0; width: 100%;">
 					<button type="button" id="btnCancelBrowserModal" class="btn btn-default" data-dismiss="modal">Exit Browser</button>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</div>
