--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -71,7 +71,7 @@
 					<p>Configure your browsing experience.</p>
 
 					<div class="checkbox">
-						<label style="font-weight: bold;"><input type="checkbox" value="">Textual Browsing</label>
+						<label style="font-weight: bold;"><input id="textualBrowsing" type="checkbox" value="">Textual Browsing</label>
 						<p style="font-style: italic;">Check this box, if you prefer text-based browsing.<br>
 						Leave it unchecked if you want to visually browse.</p>
 					</div>
@@ -100,6 +100,21 @@
 				<p>Here we recommend some possible entry points that may be interesting for you.</p>
 			</div>
 		</div>
+
+		<div id="browser" style="display: none;">
+			<div id="browserHeader">
+				<h2>RDF Browser</h2>
+				
+				<div id="browsingHistory">
+					<span>History:&nbsp;&nbsp;&nbsp;</span>
+					<ol id="list" class="breadcrumb" style="display: inline; margin: 0; padding: 0;"></ol>
+				</div>
+			</div>
+
+			<div id="browserBody">
+				<p>This is the body of the browser.</p>
+			</div>
+		</div>
 	</form>
 
 	<!-- Autocompletion Modal -->
@@ -118,15 +133,14 @@
 
 				<div class="modal-footer">
 					<button type="button" id="btnCancelModal" class="btn btn-default" data-dismiss="modal">Cancel</button>
-					<button type="button" id="btnStartBrowsing" class="btn btn-primary" onClick="startBrowsing(event)" data-toggle="modal"
-						data-target="#browserModal" data-backdrop="static" data-keyboard="false">Start Browsing</button>
+					<button type="button" id="btnStartBrowsing" class="btn btn-primary" onClick="startBrowsing(event)">Start Browsing</button>
 				</div>
 			</div>
 		</div>
 	</div>
 
 	<!-- Browser Modal -->
-	<div class="modal modal-fullscreen fade" id="browserModal" tabindex="-1" role="dialog" aria-labelledby="browserModalTitle">
+	<!--<div class="modal modal-fullscreen fade" id="browserModal" tabindex="-1" role="dialog" aria-labelledby="browserModalTitle">
 		<div class="modal-dialog" role="document" style="width: 100%; height: 100%; margin: 0; padding: 0;">
 			<div class="modal-content" style="height: 100%; width: 100%; border: none; border-radius: 0;">
 				<div id="browserModalHeader" class="modal-header">
@@ -143,12 +157,8 @@
 				</div>
 
 				<div id="browserModalBody" class="modal-body" style="overflow: auto;">...</div>
-
-				<!--<div class="modal-footer" style="position: fixed; bottom: 0; width: 100%;">
-					<button type="button" id="btnCancelBrowserModal" class="btn btn-default" data-dismiss="modal">Exit Browser</button>
-				</div>-->
 			</div>
 		</div>
-	</div>
+	</div>-->
 </body>
 </html>
