Reduces size of browser heading.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -103,7 +103,7 @@
 
 		<div id="browser" class="panel panel-default" style="display: none; margin-bottom: 0;">
 			<div id="browserHeader" class="panel-heading">
-				<h2><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> RDF Browser</h2>
+				<h3><span class="glyphicon glyphicon-globe" aria-hidden="true" style="margin-top: 0;"></span> RDF Browser</h3>
 				
 				<div id="browsingHistory">
 					<span>History:&nbsp;&nbsp;&nbsp;</span>
