Adds formatting to the textual browser.

--- a/src/main/webapp/browser.html
+++ b/src/main/webapp/browser.html
@@ -3,8 +3,7 @@
 <title>Spark RDF Analyzer - Browser</title>
 
 <link rel="stylesheet" type="text/css" href="bootstrap.css">
-<link rel="stylesheet" type="text/css" href="loader.css">
-<link rel="stylesheet" type="text/css" href="loader2.css">
+<link rel="stylesheet" type="text/css" href="css/browser.css">
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -103,7 +102,7 @@
 
 		<div id="browser" class="panel panel-default" style="display: none; margin-bottom: 0;">
 			<div id="browserHeader" class="panel-heading">
-				<h3><span class="glyphicon glyphicon-globe" aria-hidden="true" style="margin-top: 0;"></span> RDF Browser</h3>
+				<h3 style="margin-top: 0;"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> RDF Browser</h3>
 				
 				<div id="browsingHistory">
 					<span>History:&nbsp;&nbsp;&nbsp;</span>
